{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 29,
  "lineage": "592ef52d-bc53-3914-90ca-ad81ca3dd0fe",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05d32c29bb6f4edd5",
            "arn": "arn:aws:ec2:ap-northeast-2:180294200646:elastic-ip/eipalloc-05d32c29bb6f4edd5",
            "domain": "vpc",
            "id": "eipalloc-05d32c29bb6f4edd5",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-15-165-72-24.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.165.72.24",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "Name": "capstone_02_prod_nat_eip",
              "Project": "capstone_02"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "capstone_02_prod_nat_eip",
              "Project": "capstone_02"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:180294200646:internet-gateway/igw-0c29ccad41a7cf907",
            "id": "igw-0c29ccad41a7cf907",
            "owner_id": "180294200646",
            "tags": {
              "Environment": "prod",
              "Name": "capstone_02_prod_igw",
              "Project": "capstone_02"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "capstone_02_prod_igw",
              "Project": "capstone_02"
            },
            "vpc_id": "vpc-02875222072524e0a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05d32c29bb6f4edd5",
            "association_id": "eipassoc-0e5df694927415bd0",
            "connectivity_type": "public",
            "id": "nat-047233a607ccdee26",
            "network_interface_id": "eni-0590612ccce67d603",
            "private_ip": "10.0.1.116",
            "public_ip": "15.165.72.24",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a795fb11a20f2238",
            "tags": {
              "Environment": "prod",
              "Name": "capstone_02_prod_nat_gw",
              "Project": "capstone_02"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "capstone_02_prod_nat_gw",
              "Project": "capstone_02"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:180294200646:route-table/rtb-0287e98d2dc8b77b4",
            "id": "rtb-0287e98d2dc8b77b4",
            "owner_id": "180294200646",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-047233a607ccdee26",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "capstone_02_prod_private_rt",
              "Project": "capstone_02"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "capstone_02_prod_private_rt",
              "Project": "capstone_02"
            },
            "timeouts": null,
            "vpc_id": "vpc-02875222072524e0a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:180294200646:route-table/rtb-084b68f690a4c07ba",
            "id": "rtb-084b68f690a4c07ba",
            "owner_id": "180294200646",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c29ccad41a7cf907",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "capstone_02_prod_public_rt",
              "Project": "capstone_02"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "capstone_02_prod_public_rt",
              "Project": "capstone_02"
            },
            "timeouts": null,
            "vpc_id": "vpc-02875222072524e0a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2f8ae2899a5bad6",
            "route_table_id": "rtb-0287e98d2dc8b77b4",
            "subnet_id": "subnet-07b39128d35be9cf5"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b8cb6f68bfae494a",
            "route_table_id": "rtb-084b68f690a4c07ba",
            "subnet_id": "subnet-0a795fb11a20f2238"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:180294200646:security-group/sg-03889350802a4892f",
            "description": "Allow SSH, Web, and Internal Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03889350802a4892f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from Anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from Anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Internal Elasticsearch Node Communication",
                "from_port": 9300,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9300
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Internal Elasticsearch",
                "from_port": 9200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9200
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Internal MongoDB",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Internal NLP API",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Internal Postgres",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "capstone_02_prod_sg",
            "name_prefix": "",
            "owner_id": "180294200646",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "capstone_02_prod_sg",
              "Project": "capstone_02"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "capstone_02_prod_sg",
              "Project": "capstone_02"
            },
            "timeouts": null,
            "vpc_id": "vpc-02875222072524e0a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:180294200646:security-group/sg-0320f0b86598d4e16",
            "description": "Security group for VPC Endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0320f0b86598d4e16",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "capstone_02_prod_vpce_sg",
            "name_prefix": "",
            "owner_id": "180294200646",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "capstone_02_prod_vpce_sg",
              "Project": "capstone_02"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "capstone_02_prod_vpce_sg",
              "Project": "capstone_02"
            },
            "timeouts": null,
            "vpc_id": "vpc-02875222072524e0a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:180294200646:subnet/subnet-07b39128d35be9cf5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b39128d35be9cf5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "180294200646",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "capstone_02_prod_private_subnet",
              "Project": "capstone_02"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "capstone_02_prod_private_subnet",
              "Project": "capstone_02"
            },
            "vpc_id": "vpc-02875222072524e0a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:180294200646:subnet/subnet-0a795fb11a20f2238",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a795fb11a20f2238",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "180294200646",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "capstone_02_prod_public_subnet",
              "Project": "capstone_02"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "capstone_02_prod_public_subnet",
              "Project": "capstone_02"
            },
            "vpc_id": "vpc-02875222072524e0a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:180294200646:vpc/vpc-02875222072524e0a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f300d1c42ad5970b",
            "default_route_table_id": "rtb-02700986e8e7ead3f",
            "default_security_group_id": "sg-01f14c46d4baa324e",
            "dhcp_options_id": "dopt-0c348504b7cacf252",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02875222072524e0a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02700986e8e7ead3f",
            "owner_id": "180294200646",
            "tags": {
              "Environment": "prod",
              "Name": "capstone_02_prod_vpc",
              "Project": "capstone_02"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "capstone_02_prod_vpc",
              "Project": "capstone_02"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:180294200646:vpc-endpoint/vpce-032557da7919f3a74",
            "dns_entry": [
              {
                "dns_name": "vpce-032557da7919f3a74-6le0yutn.ec2messages.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-032557da7919f3a74-6le0yutn-ap-northeast-2a.ec2messages.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "ec2messages.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z03296232FY2J28N3CO9U"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-032557da7919f3a74",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0c4be0174f9183b29"
            ],
            "owner_id": "180294200646",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0320f0b86598d4e16"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ec2messages",
            "service_region": "ap-northeast-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.213",
                "subnet_id": "subnet-07b39128d35be9cf5"
              }
            ],
            "subnet_ids": [
              "subnet-07b39128d35be9cf5"
            ],
            "tags": {
              "Environment": "prod",
              "Name": "capstone_02_prod_ec2messages_endpoint",
              "Project": "capstone_02"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "capstone_02_prod_ec2messages_endpoint",
              "Project": "capstone_02"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-02875222072524e0a"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:180294200646:vpc-endpoint/vpce-04c49dfc8df7e70d0",
            "dns_entry": [
              {
                "dns_name": "vpce-04c49dfc8df7e70d0-3nj3j9qm.ssm.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-04c49dfc8df7e70d0-3nj3j9qm-ap-northeast-2a.ssm.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "ssm.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z0757397ZO9J23EEI6KW"
              },
              {
                "dns_name": "ssm.ap-northeast-2.api.aws",
                "hosted_zone_id": "Z080297965ICDM09WX9F"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-04c49dfc8df7e70d0",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0e115f44a7313ac95"
            ],
            "owner_id": "180294200646",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0320f0b86598d4e16"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ssm",
            "service_region": "ap-northeast-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.192",
                "subnet_id": "subnet-07b39128d35be9cf5"
              }
            ],
            "subnet_ids": [
              "subnet-07b39128d35be9cf5"
            ],
            "tags": {
              "Environment": "prod",
              "Name": "capstone_02_prod_ssm_endpoint",
              "Project": "capstone_02"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "capstone_02_prod_ssm_endpoint",
              "Project": "capstone_02"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-02875222072524e0a"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:180294200646:vpc-endpoint/vpce-02b512e3a0ca44cea",
            "dns_entry": [
              {
                "dns_name": "vpce-02b512e3a0ca44cea-kewsd158.ssmmessages.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-02b512e3a0ca44cea-kewsd158-ap-northeast-2a.ssmmessages.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "ssmmessages.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z07660962E83MIT74K2TR"
              },
              {
                "dns_name": "ssmmessages.ap-northeast-2.api.aws",
                "hosted_zone_id": "Z08055671NOYHH93L0Q7R"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-02b512e3a0ca44cea",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-002450b61edb5ecb7"
            ],
            "owner_id": "180294200646",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0320f0b86598d4e16"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ssmmessages",
            "service_region": "ap-northeast-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.149",
                "subnet_id": "subnet-07b39128d35be9cf5"
              }
            ],
            "subnet_ids": [
              "subnet-07b39128d35be9cf5"
            ],
            "tags": {
              "Environment": "prod",
              "Name": "capstone_02_prod_ssmmessages_endpoint",
              "Project": "capstone_02"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "capstone_02_prod_ssmmessages_endpoint",
              "Project": "capstone_02"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-02875222072524e0a"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}